.antlr/LogoTECParser.java
// Generated from /home/jeremy/Semestre/Compiladores/Proyecto LogoTEC/LogoTEC/LogoTEC.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LogoTECParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, HAZ=2, INIC=3, INC=4, AVANZA=5, RETROCEDE=6, GIRADERECHA=7, GIRAIZQUIERDA=8, 
		PONPOS=9, PONXY=10, PONRUMBO=11, RUMBO=12, PONX=13, PONY=14, CENTRO=15, 
		BAJALAPIZ=16, SUBELAPIZ=17, PONCOLORLAPIZ=18, OCULTATORTUGA=19, ESPERA=20, 
		EJECUTA=21, REPITE=22, SI=23, HAZ_HASTA=24, HASTA=25, HAZ_MIENTRAS=26, 
		MIENTRAS=27, Y=28, O=29, IGUALES=30, MAYORQUE=31, MENORQUE=32, DIFERENCIA=33, 
		AZAR=34, PRODUCTO=35, POTENCIA=36, DIVISION=37, SUMA=38, PARA=39, FIN=40, 
		BOOLEAN=41, COLOR=42, IGUAL=43, SEMICOLON=44, SQUARE_OPEN=45, SQUARE_CLOSE=46, 
		BRACKET_OPEN=47, BRACKET_CLOSE=48, PAR_OPEN=49, PAR_CLOSE=50, GUION=51, 
		COMILLA=52, STRING=53, ID=54, NUMERO=55, LETRAS=56, GUION_BAJO=57, DIGITO=58, 
		ESPACIO=59, SALTO_LINEA=60, WS=61;
	public static final int
		RULE_program = 0, RULE_estructura_comentario = 1, RULE_comentario = 2, 
		RULE_procedimientos = 3, RULE_procedimiento = 4, RULE_parametros = 5, 
		RULE_ordenes = 6, RULE_orden = 7, RULE_instruccion = 8, RULE_haz = 9, 
		RULE_inic = 10, RULE_inc = 11, RULE_avanza = 12, RULE_retrocede = 13, 
		RULE_giraderecha = 14, RULE_giraizquierda = 15, RULE_ponpos = 16, RULE_ponxy = 17, 
		RULE_ponrumbo = 18, RULE_ponx = 19, RULE_pony = 20, RULE_centro = 21, 
		RULE_bajalapiz = 22, RULE_subelapiz = 23, RULE_poncolor = 24, RULE_ocultatortuga = 25, 
		RULE_espera = 26, RULE_ejecuta = 27, RULE_repite = 28, RULE_si = 29, RULE_haz_hasta = 30, 
		RULE_hasta = 31, RULE_haz_mientras = 32, RULE_mientras = 33, RULE_op_logica = 34, 
		RULE_y = 35, RULE_o = 36, RULE_boolean_val = 37, RULE_op_comparativa = 38, 
		RULE_iguales = 39, RULE_mayorque = 40, RULE_menorque = 41, RULE_operacion = 42, 
		RULE_op_algebraicas = 43, RULE_numeric_val = 44, RULE_diferencia = 45, 
		RULE_azar = 46, RULE_producto = 47, RULE_potencia = 48, RULE_division = 49, 
		RULE_suma = 50, RULE_rumbo = 51;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "estructura_comentario", "comentario", "procedimientos", "procedimiento", 
			"parametros", "ordenes", "orden", "instruccion", "haz", "inic", "inc", 
			"avanza", "retrocede", "giraderecha", "giraizquierda", "ponpos", "ponxy", 
			"ponrumbo", "ponx", "pony", "centro", "bajalapiz", "subelapiz", "poncolor", 
			"ocultatortuga", "espera", "ejecuta", "repite", "si", "haz_hasta", "hasta", 
			"haz_mientras", "mientras", "op_logica", "y", "o", "boolean_val", "op_comparativa", 
			"iguales", "mayorque", "menorque", "operacion", "op_algebraicas", "numeric_val", 
			"diferencia", "azar", "producto", "potencia", "division", "suma", "rumbo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'//'", "'HAZ'", "'INIC'", "'INC'", null, null, null, null, "'PONPOS'", 
			"'PONXY'", "'PONRUMBO'", "'RUMBO'", "'PONX'", "'PONY'", "'CENTRO'", null, 
			null, null, null, "'ESPERA'", "'EJECUTA'", "'REPITE'", "'SI'", "'HAZ.HASTA'", 
			"'HASTA'", "'HAZ.MIENTRAS'", "'MIENTRAS'", "'Y'", "'O'", "'IGUALES?'", 
			"'MAYORQUE?'", "'MENORQUE?'", "'DIFERENCIA'", "'AZAR'", "'PRODUCTO'", 
			"'POTENCIA'", "'DIVISION'", "'SUMA'", "'PARA'", "'FIN'", null, null, 
			"'='", "';'", "'['", "']'", "'{'", "'}'", "'('", "')'", "'-'", "'\"'", 
			null, null, null, null, "'_'", null, "' '", "'\\n'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "HAZ", "INIC", "INC", "AVANZA", "RETROCEDE", "GIRADERECHA", 
			"GIRAIZQUIERDA", "PONPOS", "PONXY", "PONRUMBO", "RUMBO", "PONX", "PONY", 
			"CENTRO", "BAJALAPIZ", "SUBELAPIZ", "PONCOLORLAPIZ", "OCULTATORTUGA", 
			"ESPERA", "EJECUTA", "REPITE", "SI", "HAZ_HASTA", "HASTA", "HAZ_MIENTRAS", 
			"MIENTRAS", "Y", "O", "IGUALES", "MAYORQUE", "MENORQUE", "DIFERENCIA", 
			"AZAR", "PRODUCTO", "POTENCIA", "DIVISION", "SUMA", "PARA", "FIN", "BOOLEAN", 
			"COLOR", "IGUAL", "SEMICOLON", "SQUARE_OPEN", "SQUARE_CLOSE", "BRACKET_OPEN", 
			"BRACKET_CLOSE", "PAR_OPEN", "PAR_CLOSE", "GUION", "COMILLA", "STRING", 
			"ID", "NUMERO", "LETRAS", "GUION_BAJO", "DIGITO", "ESPACIO", "SALTO_LINEA", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LogoTEC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LogoTECParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(LogoTECParser.EOF, 0); }
		public Estructura_comentarioContext estructura_comentario() {
			return getRuleContext(Estructura_comentarioContext.class,0);
		}
		public List<ProcedimientosContext> procedimientos() {
			return getRuleContexts(ProcedimientosContext.class);
		}
		public ProcedimientosContext procedimientos(int i) {
			return getRuleContext(ProcedimientosContext.class,i);
		}
		public List<OrdenesContext> ordenes() {
			return getRuleContexts(OrdenesContext.class);
		}
		public OrdenesContext ordenes(int i) {
			return getRuleContext(OrdenesContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(104);
			estructura_comentario();
			}
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1729382806934515710L) != 0)) {
				{
				setState(107);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(105);
					procedimientos();
					}
					break;
				case 2:
					{
					setState(106);
					ordenes();
					}
					break;
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(112);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Estructura_comentarioContext extends ParserRuleContext {
		public TerminalNode BRACKET_OPEN() { return getToken(LogoTECParser.BRACKET_OPEN, 0); }
		public TerminalNode GUION() { return getToken(LogoTECParser.GUION, 0); }
		public TerminalNode BRACKET_CLOSE() { return getToken(LogoTECParser.BRACKET_CLOSE, 0); }
		public TerminalNode SALTO_LINEA() { return getToken(LogoTECParser.SALTO_LINEA, 0); }
		public List<TerminalNode> ESPACIO() { return getTokens(LogoTECParser.ESPACIO); }
		public TerminalNode ESPACIO(int i) {
			return getToken(LogoTECParser.ESPACIO, i);
		}
		public List<TerminalNode> ID() { return getTokens(LogoTECParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(LogoTECParser.ID, i);
		}
		public List<TerminalNode> NUMERO() { return getTokens(LogoTECParser.NUMERO); }
		public TerminalNode NUMERO(int i) {
			return getToken(LogoTECParser.NUMERO, i);
		}
		public Estructura_comentarioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estructura_comentario; }
	}

	public final Estructura_comentarioContext estructura_comentario() throws RecognitionException {
		Estructura_comentarioContext _localctx = new Estructura_comentarioContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_estructura_comentario);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(T__0);
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ESPACIO) {
				{
				{
				setState(115);
				match(ESPACIO);
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(121);
			match(BRACKET_OPEN);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 630503947831869440L) != 0)) {
				{
				{
				setState(122);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 630503947831869440L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(128);
			match(GUION);
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 630503947831869440L) != 0)) {
				{
				{
				setState(129);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 630503947831869440L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(135);
			match(BRACKET_CLOSE);
			setState(136);
			match(SALTO_LINEA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComentarioContext extends ParserRuleContext {
		public List<TerminalNode> SALTO_LINEA() { return getTokens(LogoTECParser.SALTO_LINEA); }
		public TerminalNode SALTO_LINEA(int i) {
			return getToken(LogoTECParser.SALTO_LINEA, i);
		}
		public List<TerminalNode> ID() { return getTokens(LogoTECParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(LogoTECParser.ID, i);
		}
		public List<TerminalNode> DIGITO() { return getTokens(LogoTECParser.DIGITO); }
		public TerminalNode DIGITO(int i) {
			return getToken(LogoTECParser.DIGITO, i);
		}
		public List<TerminalNode> ESPACIO() { return getTokens(LogoTECParser.ESPACIO); }
		public TerminalNode ESPACIO(int i) {
			return getToken(LogoTECParser.ESPACIO, i);
		}
		public ComentarioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comentario; }
	}

	public final ComentarioContext comentario() throws RecognitionException {
		ComentarioContext _localctx = new ComentarioContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_comentario);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(T__0);
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 882705526964617216L) != 0)) {
				{
				{
				setState(139);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 882705526964617216L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(146); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(145);
					match(SALTO_LINEA);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(148); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcedimientosContext extends ParserRuleContext {
		public List<ProcedimientoContext> procedimiento() {
			return getRuleContexts(ProcedimientoContext.class);
		}
		public ProcedimientoContext procedimiento(int i) {
			return getRuleContext(ProcedimientoContext.class,i);
		}
		public List<TerminalNode> SALTO_LINEA() { return getTokens(LogoTECParser.SALTO_LINEA); }
		public TerminalNode SALTO_LINEA(int i) {
			return getToken(LogoTECParser.SALTO_LINEA, i);
		}
		public ProcedimientosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedimientos; }
	}

	public final ProcedimientosContext procedimientos() throws RecognitionException {
		ProcedimientosContext _localctx = new ProcedimientosContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_procedimientos);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(163); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(153);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==SALTO_LINEA) {
						{
						{
						setState(150);
						match(SALTO_LINEA);
						}
						}
						setState(155);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(156);
					procedimiento();
					setState(160);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(157);
							match(SALTO_LINEA);
							}
							} 
						}
						setState(162);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(165); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcedimientoContext extends ParserRuleContext {
		public TerminalNode PARA() { return getToken(LogoTECParser.PARA, 0); }
		public List<TerminalNode> ESPACIO() { return getTokens(LogoTECParser.ESPACIO); }
		public TerminalNode ESPACIO(int i) {
			return getToken(LogoTECParser.ESPACIO, i);
		}
		public TerminalNode ID() { return getToken(LogoTECParser.ID, 0); }
		public TerminalNode SQUARE_OPEN() { return getToken(LogoTECParser.SQUARE_OPEN, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public TerminalNode SQUARE_CLOSE() { return getToken(LogoTECParser.SQUARE_CLOSE, 0); }
		public OrdenesContext ordenes() {
			return getRuleContext(OrdenesContext.class,0);
		}
		public TerminalNode FIN() { return getToken(LogoTECParser.FIN, 0); }
		public List<TerminalNode> SALTO_LINEA() { return getTokens(LogoTECParser.SALTO_LINEA); }
		public TerminalNode SALTO_LINEA(int i) {
			return getToken(LogoTECParser.SALTO_LINEA, i);
		}
		public ProcedimientoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedimiento; }
	}

	public final ProcedimientoContext procedimiento() throws RecognitionException {
		ProcedimientoContext _localctx = new ProcedimientoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_procedimiento);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			match(PARA);
			setState(168);
			match(ESPACIO);
			setState(169);
			match(ID);
			setState(170);
			match(ESPACIO);
			setState(171);
			match(SQUARE_OPEN);
			setState(172);
			parametros();
			setState(173);
			match(SQUARE_CLOSE);
			setState(174);
			ordenes();
			setState(178);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SALTO_LINEA) {
				{
				{
				setState(175);
				match(SALTO_LINEA);
				}
				}
				setState(180);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(181);
			match(FIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametrosContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(LogoTECParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(LogoTECParser.ID, i);
		}
		public List<TerminalNode> ESPACIO() { return getTokens(LogoTECParser.ESPACIO); }
		public TerminalNode ESPACIO(int i) {
			return getToken(LogoTECParser.ESPACIO, i);
		}
		public ParametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros; }
	}

	public final ParametrosContext parametros() throws RecognitionException {
		ParametrosContext _localctx = new ParametrosContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parametros);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(203);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID || _la==ESPACIO) {
				{
				setState(186);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ESPACIO) {
					{
					{
					setState(183);
					match(ESPACIO);
					}
					}
					setState(188);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(189);
				match(ID);
				setState(194);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(190);
						match(ESPACIO);
						setState(191);
						match(ID);
						}
						} 
					}
					setState(196);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				}
				setState(200);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ESPACIO) {
					{
					{
					setState(197);
					match(ESPACIO);
					}
					}
					setState(202);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OrdenesContext extends ParserRuleContext {
		public List<OrdenContext> orden() {
			return getRuleContexts(OrdenContext.class);
		}
		public OrdenContext orden(int i) {
			return getRuleContext(OrdenContext.class,i);
		}
		public OrdenesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ordenes; }
	}

	public final OrdenesContext ordenes() throws RecognitionException {
		OrdenesContext _localctx = new OrdenesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ordenes);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(206); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(205);
					orden();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(208); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OrdenContext extends ParserRuleContext {
		public InstruccionContext instruccion() {
			return getRuleContext(InstruccionContext.class,0);
		}
		public List<TerminalNode> SALTO_LINEA() { return getTokens(LogoTECParser.SALTO_LINEA); }
		public TerminalNode SALTO_LINEA(int i) {
			return getToken(LogoTECParser.SALTO_LINEA, i);
		}
		public List<TerminalNode> ESPACIO() { return getTokens(LogoTECParser.ESPACIO); }
		public TerminalNode ESPACIO(int i) {
			return getToken(LogoTECParser.ESPACIO, i);
		}
		public OrdenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_orden; }
	}
